# card

./: .dockerignore  .env  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requests.http  setup.sh
migrations/: env.py
src/: main.py
src/api/: deps.py
src/api/routes/: admin.py  auth.py  cards.py  transactions.py
src/core/: config.py  security.py  setup_admin.py
src/core/security/: crypto.py  hashing.py  jwt.py
src/core/util/: card_number_generator.py
src/crud/: card.py
src/db/: session.py
src/db/models/: card.py  user.py
src/domain/constants/: card_constants.py  user_constants.py
src/domain/enums/: card_status.py  user_role.py
src/domain/rules/: card_rules.py  transaction_rules.py
src/schemas/: card.py  user.py
src/services/: card_service.py  transaction_service.py
tests/: test_crypto.py
